@@ -17,7 +17,6 @@ class AppendByRefTests extends PHPUnit_Framework_TestCase {
         $this->smarty = new Smarty();
         $this->old_error_level = error_reporting();
         error_reporting(E_ALL);
-        $this->smarty->plugins_dir = array('..' . DIRECTORY_SEPARATOR . 'plugins' . DIRECTORY_SEPARATOR);
     } 
 
     public function tearDown()
