@@ -21,7 +21,7 @@ class SmartyTests extends PHPUnit_Framework_TestSuite {
 
         PHPUnit_Util_Filter::addDirectoryToWhitelist('../libs');
         PHPUnit_Util_Filter::removeDirectoryFromWhitelist('../libs/lexer');
-        PHPUnit_Util_Filter::addDirectoryToWhitelist('../plugins');
+        PHPUnit_Util_Filter::addDirectoryToWhitelist('../libs/plugins');
 
         $suite = new self('Smarty 3 - Unit Tests Report'); 
         // load test which should run in specific order
